--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ header .logo{
     padding-left: 20px;
     color: #fff;
 }
-header .menu{
+header .menu--oper{
     width: 30px;
     height: 20px;
     display: flex;
@@ -63,9 +63,11 @@ header .menu-line{
 
 .container .info .name{
     font-weight: bold;
-    font-size: 80px;
+    font-size: 70px;
     margin-top: 10px;
     margin-bottom: 30px;
+    text-transform: uppercase;
+    
 }
 
 .container .info .buttons a {
@@ -118,6 +120,26 @@ footer a:hover{
     border-bottom: 1px solid #333;
 }
 
+header .menu--oper{
+    display: none;
+}
+
+header .menu ul li a{
+    text-decoration: none;
+    color: #fff;
+    
+}
+
+header .menu ul li a:hover{
+    border-bottom: 1px solid #3b576d;
+}
+
+nav ul,
+nav li{
+    display: flex;
+    padding: 5px;
+    text-transform: uppercase;
+}
 
 
 @media (max-width:850px){
@@ -131,6 +153,34 @@ footer a:hover{
         position: initial;
         background-color: #3b576d;
     }
+    
+   
+
+    header .menu--oper{
+        display: flex;
+        margin-right: -530px;
+    }
+
+    nav ul{
+        
+        display:none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(59, 87, 109, 0.8);
+        width: 80vw;
+        height: calc(100vh - 100px);
+        top: 50px;
+        right: 0;
+    
+
+    }
+
+
+    .menu ul{
+
+        flex-direction: column;
+    }
+  
 
     .container{
         flex-direction: column;  
@@ -161,4 +211,47 @@ footer a:hover{
         margin-bottom: 20px;
     }
 
+    header .menu--oper{
+        display: flex;
+        margin-right: -190px;
+    }
+
+
+    nav ul{
+        
+        display: none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(59, 87, 109, 0.8);
+        width: 80vw;
+        height: calc(100vh - 100px);
+        top: 50px;
+        right: 0;
+    }
+
+    
+
+    .menu ul{
+
+        flex-direction: column;
+    }
+
+
 }
+
+    @media (min-width:501px) AND (max-width:849px){
+        header .menu--oper{
+            display: flex;
+            margin-right: -400px;
+        }
+    
+    }
+
+    @media (min-width:451px) AND (max-width:500px){
+        header .menu--oper{
+            display: flex;
+            margin-right: -300px;
+        }
+    
+    }
+
