--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,10 @@ nav li{
         
     }
 
+    header .menu ul li a:hover{
+        border-bottom: 1px solid #3b576d;
+    }
+
 }
 
 @media (max-width:450px){
@@ -237,7 +241,9 @@ nav li{
         right: 0;
     }
 
-    
+    header .menu ul li a:hover{
+        border-bottom: 1px solid #3b576d;
+    }
 
     .menu ul{
 
@@ -266,8 +272,17 @@ nav li{
             
             
         }
+
+        header .menu ul li a:hover{
+            border-bottom: 1px solid #3b576d;
+        }
     
-    
+       .menu a{
+        background-color: #fff;
+        display: inline-block;
+        padding: 10px;
+        width: 100%;
+       }
     }
 
     @media (min-width:451px) AND (max-width:500px){
@@ -281,6 +296,10 @@ nav li{
             font-weight: bold;
             line-height: 20px;
             
+        }
+
+        header .menu ul li a:hover{
+            border-bottom: 1px solid #3b576d;
         }
     
     }
