--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,13 @@ nav li{
 
         flex-direction: column;
     }
+
+    .menu a{
+        background-color: #fff;
+        display: inline-block;
+        padding: 10px;
+        width: 100%;
+       }
   
 
     .container{
@@ -250,6 +257,13 @@ nav li{
         flex-direction: column;
     }
 
+    .menu a{
+        background-color: #fff;
+        display: inline-block;
+        padding: 10px;
+        width: 100%;
+       }
+
     header .menu ul li a{
         color: #000;
         font-weight: bold;
@@ -301,6 +315,13 @@ nav li{
         header .menu ul li a:hover{
             border-bottom: 1px solid #3b576d;
         }
+
+        .menu a{
+            background-color: #fff;
+            display: inline-block;
+            padding: 10px;
+            width: 100%;
+           }
     
     }
 
